--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "bootstrap": "^5.1.3",
     "firebase": "^9.9.3",
     "ngx-currency": "^2.5.3",
-    "ngx-mask": "^14.0.3",
+    "ngx-mask": "^13.1.15",
+    "ngx-toastr": "^14.3.0",
     "primeicons": "^5.0.0",
     "rxjs": "~7.5.0",
+    "save": "^2.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
